--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link href="styles/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>Botpress is cool</h1>
+    <h1>Botpress is not so cool</h1>
   </body>
 </html>
